--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>Sistema de registro ALURA</title>
 </head>
 <body>
+    <h1>Bonjour, le monde</h1>
+
+
+    <script src="app.js"></script>
     
 </body>
 </html>
