--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 </head>
 <body>
     <h1>Bonjour, le monde</h1>
+    <form action="" method="post">
+        <label for="">name</label>
+        <input type="text" name="" id="label">
+    </form>
 
 
     <script src="app.js"></script>
